Fix center text and overflow landing page on smaller screens

--- a/styles/layout/_landing.scss
+++ b/styles/layout/_landing.scss
@@ -134,6 +134,14 @@
       width: 100%;
       margin: 1rem 0 1rem 5rem;
 
+      @include responsive(portrait) {
+        margin: 0;
+
+        p  {
+          text-align: center;
+        }
+      }
+
       p {
         font-size: 1.8rem;
         font-family: inherit;
